tests/baselines/reference/subtypingWithStringIndexer4.errors.txt
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts(11,7): error TS2415: Class 'B' incorrectly extends base class 'A'.
  Index signatures are incompatible.
    Type 'string' is not assignable to type 'Derived'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts(20,11): error TS2415: Class 'B' incorrectly extends base class 'A<Base>'.
  Index signatures are incompatible.
    Type 'string' is not assignable to type 'Base'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts(20,23): error TS2344: Type 'Base' does not satisfy the constraint 'Derived'.
  Property 'bar' is missing in type 'Base' but required in type 'Derived'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts(24,11): error TS2415: Class 'B3<T>' incorrectly extends base class 'A<T>'.
  Index signatures are incompatible.
    Type 'string' is not assignable to type 'T'.


==== tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts (4 errors) ====
    // Derived type indexer must be subtype of base type indexer
    
    interface Base { foo: string; }
    interface Derived extends Base { bar: string; }
    interface Derived2 extends Derived { baz: string; }
    
    class A {
        [x: string]: Derived;
    }
    
    class B extends A {
          ~
!!! error TS2415: Class '{|B|0|}' incorrectly extends base class '{|A|1|}'.
!!! error TS2415:   Index signatures are incompatible.
!!! error TS2415:     Type 'string' is not assignable to type '{|Derived|2|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts:11:7
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts:7:7
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts:4:11
        [x: string]: string; // error
    }
    
    module Generics {
        class A<T extends Derived> {
            [x: string]: T;
        }
    
        class B extends A<Base> {
              ~
!!! error TS2415: Class '{|B|0|}' incorrectly extends base class '{|A|1|}<{|Base|2|}>'.
!!! error TS2415:   Index signatures are incompatible.
!!! error TS2415:     Type 'string' is not assignable to type '{|Base|3|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts:20:11
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts:16:11
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts:3:11
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts:3:11
                          ~~~~
!!! error TS2344: Type '{|Base|0|}' does not satisfy the constraint '{|Derived|1|}'.
!!! error TS2344:   Property 'bar' is missing in type '{|Base|2|}' but required in type '{|Derived|3|}'.
!!! related TS2728 tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts:4:34: 'bar' is declared here.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts:3:11
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts:4:11
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts:3:11
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts:4:11
            [x: string]: string; // error
        }
    
        class B3<T extends Derived> extends A<T> {
              ~~
!!! error TS2415: Class '{|B3|0|}<{|T|1|}>' incorrectly extends base class '{|A|2|}<{|T|3|}>'.
!!! error TS2415:   Index signatures are incompatible.
!!! error TS2415:     Type 'string' is not assignable to type '{|T|4|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts:24:11
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts:24:14
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts:16:11
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts:24:14
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithStringIndexer4.ts:24:14
            [x: string]: string; // error
        }
    }